[package]
name = "Turbo"
version = "0.1.0"
publish = false
authors = ["Devin Leamy"] 
edition = "2021"

# [features]
# debug = []

[dependencies]
bevy = "0.7"
rand = "0.8.3"
num = "0.2.1"
libm = "0.2.1"
bevy_prototype_lyon = "0.5.0"
bevy-inspector-egui = { version = "0.11.0", optional = false }
benimator = "3.6.1"
plad_level_plugin = { path = "plad_level_plugin" }

[workspace]
members = [
    "plad_level_plugin",
]
