[package]
name = "Turbo"
version = "0.1.0"
publish = false
authors = ["Devin Leamy"] 
edition = "2021"

[features]
debug = []

# [profile.dev]
# opt-level = 1

# [profile.dev.package."*"]
# opt-level = 3

[dependencies]
bevy = { version = "0.8.1", features = ["dynamic"] } 
rand = "0.8.3"
benimator = "4.0.0-rc.1"
iyes_loopless = "0.7.1"
bevy-inspector-egui = "0.12"
