[package]
name = "Rust-Wars"
version = "0.1.0"
publish = false
authors = ["Devin Leamy"] 
edition = "2021"

[features]
debug = []

[dependencies]
bevy = { version = "0.8.1" }
rand = "0.8.3"
benimator = "4.0.0-rc.1"
iyes_loopless = "0.7.1"
bevy-inspector-egui = "0.12"
bevy_tweening = "0.5.0"

console_error_panic_hook = "0.1"

# compile for smaller bundle size
[profile.release]
opt-level = 'z'
lto = "thin"
